--- a/PortfolioCSS.css
+++ b/PortfolioCSS.css
@@ -5,12 +5,7 @@ body {
   margin: 0px;
 }
 
-#container {
-  padding-right: 20px;
-  padding-left: 20px;
-}
-
-#who {
+.who {
   text-align: center;
   padding-top: 30px;
   padding-bottom: 30px;
@@ -22,10 +17,27 @@ h1 {
   margin: 0px;
 }
 
-#p1 {
+#journey {
   margin-bottom: 0px;
 }
 
-#hello {
-  text-align: center;
+.containter2 {
+  display: inline-block;
+  padding: 20px;
+}
+
+#introP1,
+#introP2,
+#introP3 {
+  margin: 0px;
+}
+
+#code {
+  font-style: italic;
+}
+
+#code:hover {
+  font-style: italic;
+  font-weight: bolder;
+  color: #52b788;
 }
