Cleaned up the css of the border of the quote in the top right corner of the web page

--- a/PortfolioCSS.css
+++ b/PortfolioCSS.css
@@ -65,9 +65,7 @@ h1 {
 
 .quotes {
   padding: 10px;
-  border-style: outset;
-  border-radius: 10px;
-  border-color: rgb(255, 255, 255);
+  border: 4px outset white;
 }
 
 #quote1 {
