--- a/PortfolioCSS.css
+++ b/PortfolioCSS.css
@@ -11,8 +11,8 @@ div {
 
 .container1 {
   width: 400px;
-  margin: 0 auto;
-  transform: translateX(-250px);
+  margin-top: 20px;
+  transform: translateX(550px);
 }
 
 .who {
@@ -32,16 +32,21 @@ h1 {
 }
 
 .containter2 {
-  width: 550px;
+  width: 600px;
   margin: 0 auto;
   padding-top: 100px;
   padding-bottom: 100px;
+}
+
+.intro {
+  width: 570;
 }
 
 #introP1,
 #introP2,
 #introP3 {
   margin: 0px;
+  padding: 2px;
 }
 
 #code {
