Changed font family to Roboto and put it into the body. Gave it a font-weight of 400

--- a/PortfolioCSS.css
+++ b/PortfolioCSS.css
@@ -3,6 +3,7 @@ body {
   background-size: cover;
   background-position: top;
   font-family: "Roboto", sans-serif;
+  font-weight: 400;
   color: #ffffff;
 }
 
